--- a/UserMaintenance/UserMaintenance/Resource1.resx
+++ b/UserMaintenance/UserMaintenance/Resource1.resx
@@ -121,7 +121,7 @@
     <value>Hozzáadás</value>
   </data>
   <data name="FirstName" xml:space="preserve">
-    <value>Vezeték név</value>
+    <value>Utónév</value>
   </data>
   <data name="LastName" xml:space="preserve">
     <value>Kereszt név</value>
