--- a/UserMaintenance/UserMaintenance/Resource1.resx
+++ b/UserMaintenance/UserMaintenance/Resource1.resx
@@ -120,6 +120,9 @@
   <data name="Add" xml:space="preserve">
     <value>Hozzáadás</value>
   </data>
+  <data name="Add to File" xml:space="preserve">
+    <value>Fájlba írás</value>
+  </data>
   <data name="LastName" xml:space="preserve">
     <value>Kereszt név</value>
   </data>
